# AuthService

./: Dockerfile  README.md  app.py  noxfile.py  pyproject.toml  resources.py  routes.py
.github/workflows/: publish.yml
app/: app.py  extensions.py  main.py  models.py  resources.py  routes.py  storage.py  test_resources.py
keys/: jwtRS256.key
