[tool.poetry]
name = "rosa-auth-service"
version = "0.1.0"
description = "Auth Service for ROSA system"
authors = ["Robert Piwowarek <rpw@touk.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
flask = "^1.1.2"
flask_restful = "^0.3.8"
flask-jwt-extended = "^3.24.1"
cryptography = "^2.9.2"
flask-sqlalchemy = "^2.4.1"
bcrypt = "^3.1.7"
pymysql = "^0.9.3"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pytest = "^5.4.1"
nox = "^2019.11.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
